--- a/.fonts/readme
+++ b/.fonts/readme
@@ -24,7 +24,17 @@ fc-cache -f -v ~/.fonts/FantasqueSansMono
 
 
 mkdir -p ~/.fonts/font-awesome
-wget -c -P  ~/.fonts/font-awesome  https://github.com/FortAwesome/Font-Awesome/blob/master/fonts/fontawesome-webfont.ttf?raw=true -O fontawesome-webfont.ttf
+wget -c -P ~/.fonts/font-awesome/  https://github.com/FortAwesome/Font-Awesome/blob/master/fonts/fontawesome-webfont.ttf?raw=true -O ~/.fonts/font-awesome/fontawesome-webfont.ttf
 fc-cache -f -v ~/.fonts/font-awesome
+
+mkdir -p ~/.fonts/FiraCode
+wget -c -P ~/.fonts/FiraCode/ https://github.com/tonsky/FiraCode/releases/download/1.204/FiraCode_1.204.zip
+unzip  ~/.fonts/FiraCode/FiraCode_1.204.zip -d  ~/.fonts/FiraCode/ 
+fc-cache -f -v ~/.fonts/FiraCode
+
+mkdir -p ~/.fonts/emoji-one-color
+wget -P ~/.fonts/emoji-one-color/  https://github.com/eosrei/emojione-color-font/releases/download/v1.3/EmojiOneColor-SVGinOT-Linux-1.3.tar.gz
+tar xvfz ~/.fonts/emoji-one-color/EmojiOneColor-SVGinOT-Linux-1.3.tar.gz -C ~/.fonts/emoji-one-color/
+fc-cache -f -v ~/.fonts/emoji-one-color
 
 echo "finished installing"
