--- a/.fonts/readme
+++ b/.fonts/readme
@@ -2,17 +2,17 @@
 
 echo "installing fonts at $PWD to ~/.fonts/"
 
-mkdir -p ~/.fonts/adobe-fonts/source-code-pro
-mkdir -p ~/.fonts/adobe-fonts/source-han-sans
+#mkdir -p ~/.fonts/adobe-fonts/source-code-pro
+#mkdir -p ~/.fonts/adobe-fonts/source-han-sans
 
-git clone --depth 1 --branch release https://github.com/adobe-fonts/source-code-pro.git ~/.fonts/adobe-fonts/source-code-pro
+#git clone --depth 1 --branch release https://github.com/adobe-fonts/source-code-pro.git ~/.fonts/adobe-fonts/source-code-pro
 
-git clone --depth 1 --branch release https://github.com/adobe-fonts/source-han-sans.git ~/.fonts/adobe-fonts/source-han-sans
+#git clone --depth 1 --branch release https://github.com/adobe-fonts/source-han-sans.git ~/.fonts/adobe-fonts/source-han-sans
 
 # find ~/.fonts/ -iname '*.ttf' -exec echo \{\} \;
 
-fc-cache -f -v ~/.fonts/adobe-fonts/source-code-pro
-fc-cache -f -v ~/.fonts/adobe-fonts/source-han-sans
+#fc-cache -f -v ~/.fonts/adobe-fonts/source-code-pro
+#fc-cache -f -v ~/.fonts/adobe-fonts/source-han-sans
 
 
 mkdir -p ~/.fonts/FantasqueSansMono
